# keyell

./: Cargo.toml  flake.nix
benches/: basic.rs
src/: lib.rs  main.rs  math.rs  net.rs  physics.rs  ppm.rs  ppm_writer.rs  types.rs
src/render/: camera.rs  color.rs  colorer.rs  hittable.rs  material.rs  mod.rs  ray.rs
src/types/: camera.rs  canvas.rs  color.rs  colorer.rs  hittable.rs  material.rs  mod.rs  normal.rs  point.rs  ray.rs  sphere.rs  vec3.rs
