[package]
name = "keyell"
version = "0.1.0"
authors = ["Cédric Barreteau <cedric.barreteau@free.fr>"]
edition = "2018"

[dependencies]
eframe = "0.26.1"
rand = { version = "0.8", features = ["small_rng"]}
rayon = "1.8.1"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "basic"
harness = false
